// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArticlesCell Empty fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Empty
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Failure fragment matches snapshot 1`] = `
<DocumentFragment>
  <div
    style="color: red;"
  >
    Error: Oh no
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Loading fragment matches snapshot 1`] = `
<DocumentFragment>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;

exports[`ArticlesCell Success fragment matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="space-y-10"
  >
    <article>
      <header>
        <h2
          class="text-xl text-blue-700 font-semibold"
        >
          <a
            href="/article/1"
          >
            First Post
          </a>
        </h2>
      </header>
      <div
        class="mt-2 text-gray-900 font-light"
      >
        Neutra tacos hot chicken prism raw denim, put a bird on it enamel pin post-ironic vape cred DIY. Str...
      </div>
      <div>
        Posted at: 2020-01-01T12:34:56Z
      </div>
    </article>
    <article>
      <header>
        <h2
          class="text-xl text-blue-700 font-semibold"
        >
          <a
            href="/article/2"
          >
            Second Post
          </a>
        </h2>
      </header>
      <div
        class="mt-2 text-gray-900 font-light"
      >
        Master cleanse gentrify irony put a bird on it hexagon enamel pin. Pop-up man braid artisan pug tild...
      </div>
      <div>
        Posted at: 2020-01-01T12:34:56Z
      </div>
    </article>
  </div>
</DocumentFragment>
`;
